<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_name">Name</string>
    <string name="rating">Rating: </string>
    <string name="release_date">Release Date: </string>
    <string name="overview">OverView: </string>
    <string name="top_rated">Top Rated</string>
    <string name="movie_details">Movie Details</string>
    <string name="back_poster">Back poster</string>
    <string name="poster">poster</string>
    <string name="reviews">Reviews</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
</resources>
