<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetail">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/poster_height"
        android:contentDescription="@string/back_poster"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="@dimen/poster_width"
        android:layout_height="@dimen/poster_height"
        android:layout_below="@+id/backdrop"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/poster"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/backdrop"
        app:layout_constraintTop_toBottomOf="@+id/backdrop" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/movie_name"
        android:textSize="@dimen/movie_name_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/backdrop" />

    <TextView
        android:id="@+id/rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        android:textSize="@dimen/sub_title_size"
        app:layout_constraintEnd_toEndOf="@+id/movie_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/movie_name"
        app:layout_constraintTop_toBottomOf="@+id/movie_name" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/rating_title"
        android:textSize="@dimen/sub_title_size"
        app:layout_constraintStart_toEndOf="@+id/rating_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_name"
        tools:text="5.3" />

    <TextView
        android:id="@+id/release_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_title"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/rating_title"
        app:layout_constraintTop_toBottomOf="@+id/rating_title" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/release_date_title"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/release_date_title"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        tools:text="5th sep" />

    <TextView
        android:id="@+id/overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poster"
        android:layout_marginTop="8dp"
        android:text="@string/overview"
        android:textSize="@dimen/sub_title_size"
        app:layout_constraintStart_toStartOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/poster" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overview_title"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/overview_size"
        app:layout_constraintStart_toStartOf="@+id/overview_title"
        app:layout_constraintTop_toBottomOf="@+id/overview_title"
        tools:text="@string/overview" />

    <TextView
        android:id="@+id/trailer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overview"
        android:text="Trailers"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/overview"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/trailer_title"
        app:layout_constraintTop_toBottomOf="@+id/trailer_title"
        tools:layout_editor_absoluteX="8dp">

        <ListView
            android:id="@+id/trailer_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trailer_title"
            android:layout_marginTop="8dp"></ListView>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>

</ScrollView>

</layout>
